<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>compec.java</groupId>
    <artifactId>compec.consulta.candidato</artifactId>
    <version>2.0</version>
    <name>Consulta Candidato</name>
    <build>
        <sourceDirectory>src</sourceDirectory>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <pluginRepositories>
	    <pluginRepository>
		    <id>central</id>
            <name>Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <updatePolicy>never</updatePolicy>
            </releases>
        </pluginRepository>
    </pluginRepositories>
    <repositories>
        <repository>
            <id>central</id>
            <name>Central Repository</name>
            <url>https://repo.maven.apache.org/maven2</url>
            <layout>default</layout>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <dependencies>
		<dependency>
		    <groupId>joda-time</groupId>
		    <artifactId>joda-time</artifactId>
		    <version>2.12.2</version>
		</dependency>
		<dependency>
	  		<groupId>org.apache.poi</groupId>
  			<artifactId>poi</artifactId>
  			<version>5.2.3</version>
  		</dependency>
  		<dependency>
  			<groupId>org.apache.poi</groupId>
  			<artifactId>poi-ooxml</artifactId>
  			<version>5.2.3</version>
  		</dependency>
  	    <dependency>
  	    	<groupId>net.sf.jasperreports</groupId>
      		<artifactId>jasperreports</artifactId>
  		    <version>6.20.1</version>
  	    </dependency>
  	    <dependency>
  		    <groupId>jcifs</groupId>
  		    <artifactId>jcifs</artifactId>
  		    <version>1.3.17</version>
  	    </dependency>
  	    <dependency>
  		    <groupId>commons-io</groupId>
  		    <artifactId>commons-io</artifactId>
  		    <version>2.11.0</version>
  	    </dependency>
		<dependency>
		    <groupId>commons-validator</groupId>
		    <artifactId>commons-validator</artifactId>
		    <version>1.7</version>
		</dependency>
    </dependencies>
</project>